--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,20 +1,223 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".activity.MainActivity">
 
-    <Button
-        android:id="@+id/btn_call_view"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
-        android:text="RecyclerView"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        android:fontFamily="casual"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/app_name"
         android:gravity="center"
-        android:layout_gravity="center"/>
+        android:textSize="35sp"
+        android:fontFamily="cursive"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:paddingVertical="15dp"/>
 
-</FrameLayout>
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <Button
+                android:id="@+id/btn_call_view"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="20dp"
+                android:text="Custom Basic Adapter"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="button"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+
+        </LinearLayout>
+
+    </androidx.core.widget.NestedScrollView>
+
+</LinearLayout>
