--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
         android:textSize="35sp"
         android:fontFamily="cursive"
         android:textStyle="bold"
-        android:textColor="@color/black"
+        android:textColor="@color/text_color"
         android:paddingVertical="15dp"/>
 
     <androidx.core.widget.NestedScrollView
@@ -28,15 +28,29 @@
             android:orientation="vertical">
 
             <Button
-                android:id="@+id/btn_call_view"
+                android:id="@+id/btn_call_basic"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="20dp"
-                android:text="Custom Basic Adapter"
+                android:text="1. Custom Basic Adapter"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:id="@+id/btn_multiple_adapter"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="2. custom multiple adapter"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -48,6 +62,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -59,6 +74,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -70,6 +86,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -81,6 +98,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -92,6 +110,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -103,6 +122,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -114,6 +134,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -125,6 +146,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -136,6 +158,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -147,6 +170,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -158,6 +182,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -169,6 +194,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -180,6 +206,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -191,6 +218,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
@@ -202,17 +230,7 @@
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
+                android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
 
