--- a/app/src/main/res/layout/activity_recycler_multiple.xml
+++ b/app/src/main/res/layout/activity_recycler_multiple.xml
@@ -4,11 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.RecyclerActivity">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/view_recycler"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+    tools:context=".activity.RecyclerMultipleActivity">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
