--- a/app/src/main/res/layout/activity_recycler_multiple.xml
+++ b/app/src/main/res/layout/activity_recycler_multiple.xml
@@ -6,4 +6,9 @@
     android:layout_height="match_parent"
     tools:context=".activity.RecyclerMultipleActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/view_recycler_multiple"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
