--- a/app/src/main/res/layout/item_user_view_true.xml
+++ b/app/src/main/res/layout/item_user_view_true.xml
@@ -38,7 +38,7 @@
         android:text="Tomas Roy"
         android:textSize="20sp"
         android:textColor="@color/black"
-        android:gravity="center_vertical|start"
+        android:gravity="start"
         android:layout_marginStart="20dp"/>
 
 </LinearLayout>
