--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -67,167 +67,12 @@
                 android:gravity="center"
                 android:layout_gravity="center"/>
             <Button
+                android:id="@+id/btn_loading_more"
                 android:layout_width="match_parent"
                 android:layout_height="70dp"
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
-                android:textSize="17sp"
-                android:textStyle="bold"
-                android:fontFamily="casual"
-                android:textColor="@color/text_color"
-                android:gravity="center"
-                android:layout_gravity="center"/>
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="70dp"
-                android:layout_marginHorizontal="30dp"
-                android:layout_marginTop="5dp"
-                android:text="button"
+                android:text="4. Loading More"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
