--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -79,6 +79,19 @@
                 android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
+            <Button
+                android:id="@+id/btn_inside_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="5. Inside Recycler View"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:textColor="@color/text_color"
+                android:gravity="center"
+                android:layout_gravity="center"/>
 
         </LinearLayout>
 
