--- a/app/src/main/res/layout/item_header_view.xml
+++ b/app/src/main/res/layout/item_header_view.xml
@@ -12,6 +12,6 @@
         android:textSize="40sp"
         android:gravity="center"
         android:fontFamily="cursive"
-        android:background="@color/header_color"/>
+        android:background="@color/text_color"/>
 
 </LinearLayout>
