--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="20dp"
             android:orientation="vertical">
 
             <Button
@@ -125,6 +126,19 @@
                 android:layout_marginHorizontal="30dp"
                 android:layout_marginTop="5dp"
                 android:text="8/9. Horizontal Scroll &amp; Page View"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:textColor="@color/text_color"
+                android:gravity="center"
+                android:layout_gravity="center"/>
+            <Button
+                android:id="@+id/btn_on_click_listener"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="10. On Click Listener"
                 android:textSize="17sp"
                 android:textStyle="bold"
                 android:fontFamily="casual"
