--- a/app/src/main/res/layout/activity_page_view.xml
+++ b/app/src/main/res/layout/activity_page_view.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     tools:context=".activity.PageViewActivity"
     android:id="@+id/view_recycler_page_view"/>
