--- a/app/src/main/res/layout/item_page_view.xml
+++ b/app/src/main/res/layout/item_page_view.xml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="200dp"
+    android:layout_height="match_parent"
     android:gravity="center"
     android:orientation="vertical"
-    android:background="@color/text_color"
-    android:layout_margin="1dp">
+    android:background="@color/text_color">
 
     <TextView
         android:id="@+id/tv_page_view"
@@ -13,9 +12,7 @@
         android:layout_height="wrap_content"
         android:text="@string/app_name"
         android:textSize="20sp"
-        android:textColor="@color/text_color"
-        android:background="#D3D3D3"
-        android:padding="50dp"
+        android:textColor="@color/white"
         android:fontFamily="casual"
         android:textStyle="bold"/>
 
