--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -197,6 +197,19 @@
                 android:textColor="@color/text_color"
                 android:gravity="center"
                 android:layout_gravity="center"/>
+            <Button
+                android:id="@+id/btn_pinterest_cells"
+                android:layout_width="match_parent"
+                android:layout_height="70dp"
+                android:layout_marginHorizontal="30dp"
+                android:layout_marginTop="5dp"
+                android:text="15. Pinterest Cells"
+                android:textSize="17sp"
+                android:textStyle="bold"
+                android:fontFamily="casual"
+                android:textColor="@color/text_color"
+                android:gravity="center"
+                android:layout_gravity="center"/>
         </LinearLayout>
 
     </androidx.core.widget.NestedScrollView>
